2002-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
	
	* Bumped version to 1.2, new release. Summary of changes here. See
	  the individual Changelogs to see the detailed changes in each
	  module.

	  New modules: calendar, crc, doctools, irc, smtpd, and stooop.

	  calendar:	Version is	0.1
	  crc:		Version is	1.0
	  doctools:	Version is	1.0
	  irc:		Version is	0.1
	  smtpd:	Version is	1.0
	  stooop:	Version is	4.3

	  Changed modules: base64, comm, control, csv, fileutil, ftp,
	  html, math, mime, ncgi, nntp, pop3, struct, textutil, and uri.

	  base64:	Version stays @	2.2, but got new subpackage.
	  comm:		Version up to	3.7.1
	  control:	Version up to	0.2
	  csv:		Version up to	0.2
	  fileutil:	Version up to	1.3
	  ftp:		Version up to	2.3
	  html:		Version up to	1.2
	  math:		Version up to	1.2
	  mime:		Version up to	1.3.1
	  ncgi:		Version up to	1.2.1
	  nntp:		Version up to	0.2
	  pop3:		Version up to	1.5.1
	  struct:	Version up to	1.2
	  textutil:	Version up to	0.4
	  uri:		Version up to	1.1

2002-01-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* Makefile.in (dist): Fixed bug #495976.

2002-01-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc module: added sum manual page
	* base64 module: added uuencode manual page

2002-01-17  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* examples/csv/csvdiff: New example for csv module. FR #485717.

	* mime: Fixed bug #499242.

2002-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* mime: Implemented FR #503336
 	* ftp:  Fixed bug #503471.
	* nntp: Fixed bug #502250

2002-01-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64 module: added uuencode package
	* crc module: added sum and cksum packages.

2002-01-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* mkInstallScripts.tcl:
	* Makefile.in: Added crc and smtpd modules to the installation files.
	
2002-01-11  Kevin Kenny  <kennykb@users.sourceforge.net>
